--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    background-color: red;
 }
 
 header {
@@ -77,14 +78,16 @@ header {
   }
 
 h1 {
-    font-size: 5em;
-    color: black;
+    font-size: 2em;
+    color: green;
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 100px auto;
+    background-color: yellow;
+
     
 }
 
