--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: red;
 }
 
 header {
@@ -79,15 +78,13 @@ header {
 
 h1 {
     font-size: 2em;
-    color: green;
+    color: black;
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 100px auto;
-    background-color: yellow;
-
     
 }
 
