--- a/scss/style.scss
+++ b/scss/style.scss
@@ -570,3 +570,26 @@
     }
   }
   
+  #nav-link {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 0;
+    height: 0;
+    font-size: 20px;
+    text-decoration: none;
+    color: #aaa;
+    font-size: 10px;
+
+    &:hover {
+      color: black;
+    }
+    
+    &:not(:last-child)::after {
+      content: "|";
+      margin: 0 04px;
+      color: #aaa;
+    }
+  }
