--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,595 +1,636 @@
 * {
-    margin: 0;
-  }
-  
-  body {
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-  header {
-    display: flex;
-    align-items: center;
-  }
-  
-  /* #arriba h1 {
-      color: black;
-      text-decoration: none;
-      font-weight: bold;
-      margin-right: auto;
-      margin-left: 0;
-      font-size: 23px;
-    } */
-  
-  #arriba p {
+  margin: 0;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+header {
+  display: flex;
+  align-items: center;
+}
+
+/* #arriba h1 {
     color: black;
     text-decoration: none;
     font-weight: bold;
     margin-right: auto;
-    margin-left: 30px;
+    margin-left: 0;
     font-size: 23px;
-  }
-  
-  #links {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  } */
+
+#arriba p {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  margin-right: auto;
+  margin-left: 30px;
+  font-size: 23px;
+}
+
+#links {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+  height: 0;
+  font-size: 20px;
+
+  li {
     margin: 0;
     padding: 0;
-    height: 0;
-    font-size: 20px;
-  
-    li {
-      margin: 0;
-      padding: 0;
-  
-      &:not(:last-child)::after {
-        content: "|";
-        margin: 0 04px;
-        color: #aaa;
-      }
-  
-      a {
-        text-decoration: none;
-        color: #aaa;
-        font-size: 10px;
-  
-        &:hover {
-          color: black;
-        }
-      }
-    }
-  }
-  
-  /*MAIN PAGE*/
-  
-  #logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    img {
-      max-width: 100%;
-      filter: grayscale(60%);
-    }
-  }
-  
-  h1 {
-    font-size: 2em;
-    color: black;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 100px auto;
-  }
-  
-  #botones {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
-  .botongaleria button {
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    font-size: 10px;
-  }
-  
-  .botoncontacto button {
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 5px 10px;
-    font-size: 10px;
-    margin-left: 10px;
-  }
-  
-  .botongaleria button:hover {
-    background-color: #0e79b2;
-  }
-  
-  .botoncontacto button:hover {
-    background-color: #0e79b2;
-    color: #fff;
-    border-color: #0e79b2;
-  }
-  
-  #proyecto {
-    margin-top: 90px;
-  
-    /* margin-bottom: 90px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #000000;
-  
-    img {
-      max-width: 100%;
-  
-      /* filter: grayscale(70%); */
-    }
-  }
-  
-  #enlaces {
-    ul {
-      margin-bottom: 90px;
-      list-style-type: none;
-      padding: 20;
-    }
-  
-    li {
-      display: block;
-      font-weight: bold;
-      margin-bottom: 30px;
-    }
-  
-    a {
-      font-size: 60px;
+
+    &:not(:last-child)::after {
+      content: "|";
+      margin: 0 4px;
       color: #aaa;
+    }
+
+    a {
       text-decoration: none;
-      transition: color 0.3s ease;
-  
+      color: #aaa;
+      font-size: 10px;
+
       &:hover {
         color: black;
       }
     }
   }
-  
-  /*footer general*/
-  
-  #footer {
-    background-color: black;
-    margin-top: 40px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    h1 {
-      color: white;
-      margin-top: 0;
-      margin-bottom: 3px;
-    }
-  
-    p {
-      margin-top: 0;
-      color: white;
-      font-size: 10px;
-      text-align: center;
-    }
+}
+
+/*MAIN PAGE*/
+
+#logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    max-width: 100%;
+    filter: grayscale(60%);
   }
-  
-  /*NOSOTROS*/
-  
-  .nosotros {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: black;
-  
-    h1 {
-      font-size: 3rem;
-      margin-top: 200px;
-      margin-bottom: 30px;
-    }
-  
-    p {
-      font-size: 15px;
-      margin-bottom: 100px;
-      width: 70%;
-    }
-  
-    img {
-      width: 100%;
-      margin: 0;
-    }
+}
+
+h1 {
+  font-size: 2em;
+  color: black;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 100px auto;
+}
+
+#botones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.botongaleria button {
+  background-color: #444;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 10px;
+}
+
+.botoncontacto button {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-size: 10px;
+  margin-left: 10px;
+}
+
+.botongaleria button:hover {
+  background-color: #0e79b2;
+}
+
+.botoncontacto button:hover {
+  background-color: #0e79b2;
+  color: #fff;
+  border-color: #0e79b2;
+}
+
+#proyecto {
+  margin-top: 90px;
+
+  /* margin-bottom: 90px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+
+  img {
+    max-width: 100%;
+
+    /* filter: grayscale(70%); */
   }
-  
-  #enfoques {
-    display: flex;
-    justify-content: center;
-    background-color: #000;
-    color: white;
-    margin-bottom: 0;
+}
+
+#enlaces {
+  ul {
+    margin-bottom: 90px;
+    list-style-type: none;
+    padding: 20;
   }
-  
-  .sustentabilidad, .ambiente, .tecnicas {
-    width: 30%;
-    margin: 20px;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .sustentabilidad p, .ambiente p, .tecnicas p {
-    font-size: 11px;
-  }
-  
-  .sustentabilidad h2, .ambiente h2, .tecnicas h2 {
-    margin-bottom: 10px;
-  }
-  
-  /*Footer Nosotros*/
-  
-  #footernosotros {
-    background-color: black;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    h1 {
-      color: white;
-      margin-top: 0;
-      margin-bottom: 3px;
-    }
-  
-    p {
-      margin-top: 0;
-      margin-bottom: 5px;
-      color: white;
-      font-size: 10px;
-      text-align: center;
-    }
-  }
-  
-  /*GALERIA*/
-  
-  .galeria {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: black;
-  
-    h1 {
-      font-size: 3rem;
-      margin-top: 100px;
-      margin-bottom: 70px;
-    }
-  
-    img {
-      max-width: 100%;
-    }
-  
-    text-align: center;
-  
-    h1 {
-      font-size: 2em;
-      color: black;
-    }
-  
-    div {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-  
-    img {
-      width: 25%;
-      height: auto;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      filter: grayscale(100%);
-      transition: filter 0.3s;
-      position: relative;
-  
-      &:hover {
-        filter: none;
-      }
-  
-      &::after {
-        content: attr(alt);
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 1.5rem;
-        color: #fff;
-        opacity: 0;
-        transition: opacity 0.3s;
-      }
-  
-      &:hover::after {
-        opacity: 1;
-      }
-    }
-  }
-  
-  /*Titulos, texto e imagenes para seccion equipo*/
-  
-  #equipo h1 {
-    margin-top: 150px;
-    margin-bottom: 100px;
-    font-size: 2.5rem;
-  }
-  
-  .zaha h2, .frank h2, .koolhaas h2 {
-    margin-left: 30px;
-  }
-  
-  .zaha p, .frank p, .koolhaas p {
-    margin-left: 30px;
-    width: 70%;
-  }
-  
-  .zaha, .koolhaas {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  
-  .zaha {
-    margin-bottom: 100px;
-  }
-  
-  .frank {
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    margin-bottom: 100px;
-    margin-right: 70px;
-    background-color: rgba(0, 0, 0, 0.07);
-    padding: 30px;
-  }
-  
-  .koolhaas {
-    margin-bottom: 200px;
-  }
-  
-  .zaha img, .frank img, .koolhaas img {
-    width: 15%;
-    margin-left: 30px;
-  }
-  
-  .frank {
-    img {
-      padding: 30px;
-    }
-  
-    p, h2 {
-      margin-left: 250px;
-    }
-  }
-  
-  /*CONTACTO*/
-  
-  .google {
-    width: 100%;
-    height: 200px;
-    filter: grayscale(100%);
-    margin-bottom: 0;
-    margin-top: 60px;
-    border-top: 2px solid black;
-  
-    iframe {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  
-  /*formulario*/
-  
-  .contacto-container {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    margin: 0 300px 0 300px;
-  }
-  
-  .contacto p {
-    width: 50%;
-    margin-top: 40px;
-  }
-  
-  .contacto-ico {
-    margin-top: 5px;
-  }
-  
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    margin-top: 40px;
-  
-    label {
-      margin-bottom: 5px;
-    }
-  }
-  
-  /*botones*/
-  
-  .buttons {
+
+  li {
     display: block;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
-  .botonenviar {
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-  
-    &:hover {
-      background-color: #0e79b2;
-      color: #fff;
-      border-color: #0e79b2;
-    }
-  }
-  
-  .botonborrar {
-    background-color: #fff;
-    color: #333;
-    border: 1px solid #333;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-  
-    &:hover {
-      background-color: #0e79b2;
-      color: #fff;
-      border-color: #0e79b2;
-    }
-  }
-  
-  /*metodos de contacto iconos y ultimo texto*/
-  
-  #equipo {
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    margin-top: 30px;
-  }
-  
-  .contacto-item {
-    display: flex;
-    align-items: center;
-  
-    i {
-      margin-right: 20px;
-      padding-top: 40px;
-    }
-  }
-  
-  /*links del footer*/
-  
-  #foot {
-    list-style: none;
-    display: flex;
-    align-items: center;
+    font-weight: bold;
     margin-bottom: 30px;
-    padding: 0;
-    height: 0;
-    font-size: 17px;
-  
-    li {
-      padding: 0;
-  
-      &:not(:last-child)::after {
-        content: "|";
-        margin: 0 04px;
-        color: #ffffff;
-      }
-  
-      a {
-        text-decoration: none;
-        color: #ffffff;
-        font-size: 10px;
-  
-        &:hover {
-          color: #5a92b1;
-        }
-      }
-    }
   }
-  
-  /*siguenos footer*/
-  
-  #siguenos {
-    display: flex;
-    align-items: center;
-    flex-direction: center;
-    margin-top: 30px;
-    color: white;
-    margin-bottom: 30px;
-  
-    p {
-      margin-top: 4px;
-    }
-  }
-  
-  .siguenoslink li {
-    list-style: none;
-  }
-  
-  .facebook a, .instagram a, .twitter a, .linkedin a {
-    color: white;
-    text-decoration: none;
-    font-size: 15px;
-    margin-left: 5px;
-    margin-right: 3px;
-  }
-  
-  #siguenos {
-    li a:hover {
-      color: black;
-    }
-  
-    .facebook a:hover {
-      color: rgb(42, 42, 255);
-    }
-  
-    .instagram a:hover {
-      color: rgb(255, 0, 106);
-    }
-  
-    .twitter a:hover {
-      color: rgb(0, 132, 255);
-    }
-  
-    .linkedin a:hover {
-      color: rgb(169, 40, 255);
-    }
-  }
-  
-  #nav-link {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin: 0;
-    padding: 0;
-    height: 0;
-    font-size: 20px;
-    text-decoration: none;
+
+  a {
+    font-size: 60px;
     color: #aaa;
-    font-size: 10px;
+    text-decoration: none;
+    transition: color 0.3s ease;
 
     &:hover {
       color: black;
     }
-    
-    &:not(:last-child)::after {
-      content: "|";
-      margin: 0 04px;
-      color: #aaa;
+  }
+}
+
+/*footer general*/
+
+#footer {
+  background-color: black;
+  margin-top: 40px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    color: white;
+    margin-top: 0;
+    margin-bottom: 3px;
+  }
+
+  p {
+    margin-top: 0;
+    color: white;
+    font-size: 10px;
+    text-align: center;
+  }
+}
+
+/*NOSOTROS*/
+
+.nosotros {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: black;
+
+  h1 {
+    font-size: 3rem;
+    margin-top: 200px;
+    margin-bottom: 30px;
+  }
+
+  p {
+    font-size: 15px;
+    margin-bottom: 100px;
+    width: 70%;
+  }
+
+  img {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+#enfoques {
+  display: flex;
+  justify-content: center;
+  background-color: #000;
+  color: white;
+  margin-bottom: 0;
+}
+
+.sustentabilidad, .ambiente, .tecnicas {
+  width: 30%;
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.sustentabilidad p, .ambiente p, .tecnicas p {
+  font-size: 11px;
+}
+
+.sustentabilidad h2, .ambiente h2, .tecnicas h2 {
+  margin-bottom: 10px;
+}
+
+/*Footer Nosotros*/
+
+#footernosotros {
+  background-color: black;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    color: white;
+    margin-top: 0;
+    margin-bottom: 3px;
+  }
+
+  p {
+    margin-top: 0;
+    margin-bottom: 5px;
+    color: white;
+    font-size: 10px;
+    text-align: center;
+  }
+}
+
+/*GALERIA*/
+
+.galeria {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: black;
+  text-align: center;
+
+  h1 {
+    font-size: 3rem;
+    margin-top: 100px;
+    margin-bottom: 70px;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 2em;
+    color: black;
+  }
+
+  div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  img {
+    width: 25%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    filter: grayscale(100%);
+    transition: filter 0.3s;
+    position: relative;
+
+    &:hover {
+      filter: none;
+    }
+
+    &::after {
+      content: attr(alt);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5rem;
+      color: #fff;
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    &:hover::after {
+      opacity: 1;
     }
   }
+}
+
+/*Titulos, texto e imagenes para seccion equipo*/
+
+#equipo h1 {
+  margin-top: 150px;
+  margin-bottom: 100px;
+  font-size: 2.5rem;
+}
+
+.zaha h2, .frank h2, .koolhaas h2 {
+  margin-left: 30px;
+}
+
+.zaha p, .frank p, .koolhaas p {
+  margin-left: 30px;
+  width: 70%;
+}
+
+.zaha, .koolhaas {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.zaha {
+  margin-bottom: 100px;
+}
+
+.frank {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-bottom: 100px;
+  margin-right: 70px;
+  background-color: rgba(0, 0, 0, 0.07);
+  padding: 30px;
+}
+
+.koolhaas {
+  margin-bottom: 200px;
+}
+
+.zaha img, .frank img, .koolhaas img {
+  width: 15%;
+  margin-left: 30px;
+}
+
+.frank {
+  img {
+    padding: 30px;
+  }
+
+  p, h2 {
+    margin-left: 250px;
+  }
+}
+
+/*CONTACTO*/
+
+.google {
+  width: 100%;
+  height: 200px;
+  filter: grayscale(100%);
+  margin-bottom: 0;
+  margin-top: 60px;
+  border-top: 2px solid black;
+
+  iframe {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+/*formulario*/
+
+.contacto-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 50px;
+}
+
+@media (max-width: 600px) {
+  .contacto-container {
+    grid-template-columns: 1fr;
+    padding: 30px;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+  .contacto-container {
+    grid-template-columns: 1fr 1fr;
+    padding: 30px;
+  }
+}
+
+@media (min-width: 901px) {
+  .contacto-container {
+    grid-template-columns: 1fr 1fr;
+    padding: 30px;
+  }
+}
+
+.contacto p {
+  width: 50%;
+  margin-top: 40px;
+}
+
+.contacto-ico {
+  margin-top: 5px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  margin-top: 40px;
+
+  label {
+    margin-bottom: 5px;
+  }
+}
+
+/*botones*/
+
+.buttons {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.botonenviar {
+  background-color: #444;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+
+  &:hover {
+    background-color: #0e79b2;
+    color: #fff;
+    border-color: #0e79b2;
+  }
+}
+
+.botonborrar {
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #333;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+
+  &:hover {
+    background-color: #0e79b2;
+    color: #fff;
+    border-color: #0e79b2;
+  }
+}
+
+/*metodos de contacto iconos y ultimo texto*/
+
+#equipo {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.contacto-item {
+  display: flex;
+  align-items: center;
+
+  i {
+    margin-right: 20px;
+    padding-top: 40px;
+  }
+}
+
+/*links del footer*/
+
+#foot {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  padding: 0;
+  height: 0;
+  font-size: 17px;
+
+  li {
+    padding: 0;
+
+    &:not(:last-child)::after {
+      content: "|";
+      margin: 0 4px;
+      color: #ffffff;
+    }
+
+    a {
+      text-decoration: none;
+      color: #ffffff;
+      font-size: 10px;
+
+      &:hover {
+        color: #5a92b1;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  #foot {
+    font-size: 10px;
+
+    li {
+      margin-bottom: 10px;
+    }
+
+    a {
+      font-size: 2px;
+    }
+  }
+}
+
+@media (max-width: 412px) {
+  #foot {
+    font-size: 5px;
+  }
+}
+
+/*siguenos footer*/
+
+#siguenos {
+  display: flex;
+  align-items: center;
+  flex-direction: center;
+  margin-top: 30px;
+  color: white;
+  margin-bottom: 30px;
+
+  p {
+    margin-top: 4px;
+  }
+}
+
+.siguenoslink li {
+  list-style: none;
+}
+
+.facebook a, .instagram a, .twitter a, .linkedin a {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+  margin-left: 5px;
+  margin-right: 3px;
+}
+
+#siguenos {
+  li a:hover {
+    color: black;
+  }
+
+  .facebook a:hover {
+    color: rgb(42, 42, 255);
+  }
+
+  .instagram a:hover {
+    color: rgb(255, 0, 106);
+  }
+
+  .twitter a:hover {
+    color: rgb(0, 132, 255);
+  }
+
+  .linkedin a:hover {
+    color: rgb(169, 40, 255);
+  }
+}
+
+.container-fluid {
+  list-style: none;
+  background-color: none;
+}
+
+#navbarNav {
+  list-style: none;
+
+  li {
+    list-style: none;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+
+    a {
+      text-decoration: none;
+      color: #aaa;
+      font-size: 12px;
+
+      &:hover {
+        color: black;
+      }
+    }
+  }
+}
