--- a/css/style.css
+++ b/css/style.css
@@ -235,6 +235,13 @@ h1 {
   font-size: 10px;
   text-align: center;
 }
+@media (max-width: 600px) {
+  #footernosotros {
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 
 /*GALERIA*/
 .galeria {
@@ -459,48 +466,43 @@ h1 {
 }
 
 /*links del footer*/
-#foot {
+nav ul#foot {
   list-style: none;
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  justify-content: center;
   padding: 0;
-  height: 0;
   font-size: 17px;
 }
-#foot li {
+nav ul#foot li {
   padding: 0;
 }
-#foot li:not(:last-child)::after {
+nav ul#foot li:not(:last-child)::after {
   content: "|";
   margin: 0 4px;
   color: #ffffff;
 }
-#foot li a {
+nav ul#foot li a {
   text-decoration: none;
   color: #ffffff;
   font-size: 10px;
 }
-#foot li a:hover {
+nav ul#foot li a:hover {
   color: #5a92b1;
 }
-
 @media (max-width: 600px) {
-  #foot {
-    font-size: 10px;
+  nav ul#foot {
+    flex-wrap: wrap;
+    font-size: 14px;
   }
-  #foot li {
-    margin-bottom: 10px;
+  nav ul#foot li {
+    margin: 5px;
   }
-  #foot a {
-    font-size: 2px;
-  }
-}
-@media (max-width: 412px) {
-  #foot {
-    font-size: 5px;
+  nav ul#foot li:not(:last-child)::after {
+    content: none;
   }
 }
+
 /*siguenos footer*/
 #siguenos {
   display: flex;
