--- a/scss/style.scss
+++ b/scss/style.scss
@@ -259,6 +259,12 @@ h1 {
     font-size: 10px;
     text-align: center;
   }
+
+  @media (max-width:600px) {
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 /*GALERIA*/
@@ -510,55 +516,52 @@ h1 {
 
 /*links del footer*/
 
-#foot {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-  padding: 0;
-  height: 0;
-  font-size: 17px;
-
-  li {
+nav {
+  ul#foot {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0;
+    font-size: 17px;
 
-    &:not(:last-child)::after {
-      content: "|";
-      margin: 0 4px;
-      color: #ffffff;
+    li {
+      padding: 0;
+
+      &:not(:last-child)::after {
+        content: "|";
+        margin: 0 4px;
+        color: #ffffff;
+      }
+
+      a {
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 10px;
+
+        &:hover {
+          color: #5a92b1;
+        }
+      }
     }
+  }
 
-    a {
-      text-decoration: none;
-      color: #ffffff;
-      font-size: 10px;
+  @media (max-width: 600px) {
+    ul#foot {
+      flex-wrap: wrap;
+      font-size: 14px;
 
-      &:hover {
-        color: #5a92b1;
+      li {
+        margin: 5px;
+
+        &:not(:last-child)::after {
+          content: none;
+        }
       }
     }
   }
 }
 
-@media (max-width: 600px) {
-  #foot {
-    font-size: 10px;
-
-    li {
-      margin-bottom: 10px;
-    }
-
-    a {
-      font-size: 2px;
-    }
-  }
-}
-
-@media (max-width: 412px) {
-  #foot {
-    font-size: 5px;
-  }
-}
 
 /*siguenos footer*/
 
