--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,11 @@ h1 {
   width: 100%;
   margin: 0;
 }
+@media (max-width: 900px) {
+  .nosotros h1 {
+    margin-top: 50px;
+  }
+}
 
 #enfoques {
   display: grid;
@@ -301,59 +306,176 @@ p {
 .galeria img:hover::after {
   opacity: 1;
 }
+@media (max-width: 900px) {
+  .galeria h1 {
+    margin-top: 50px;
+  }
+}
 
 /*Titulos, texto e imagenes para seccion equipo*/
 #equipo h1 {
-  margin-top: 150px;
-  margin-bottom: 100px;
+  margin-top: 110px;
+  margin-bottom: 150px;
   font-size: 2.5rem;
 }
-
-.zaha h2, .frank h2, .koolhaas h2 {
-  margin-left: 30px;
-}
-
-.zaha p, .frank p, .koolhaas p {
-  margin-left: 30px;
-  width: 70%;
-}
-
-.zaha, .koolhaas {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+@media (max-width: 600px) {
+  #equipo h1 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
 
 .zaha {
   margin-bottom: 100px;
+  padding: 20px;
+  border-radius: 10px;
+}
+.zaha p, .zaha h2 {
+  color: black;
+  margin-right: 30px;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0px;
+}
+@media (min-width: 601px) and (max-width: 900) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 901px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.zaha img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  justify-self: center;
+}
+
+.text {
+  text-align: start;
+}
+@media (max-width: 600px) {
+  .text {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+  .img {
+    align-content: center;
+  }
+}
 .frank {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
   margin-bottom: 100px;
-  margin-right: 70px;
-  background-color: rgba(0, 0, 0, 0.07);
-  padding: 30px;
+}
+.frank .grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0;
+}
+.frank .grid-container img {
+  grid-column: 1;
+  grid-row: 1;
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  justify-self: center;
+}
+.frank .grid-container .text {
+  grid-column: 1;
+  grid-row: 2;
+  text-align: start;
+}
+.frank .grid-container p, .frank .grid-container h2 {
+  color: black;
+  margin-left: 50px;
+}
+@media (min-width: 901px) {
+  .frank .grid-container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .frank .grid-container img {
+    grid-column: 2;
+    grid-row: 1/span 2;
+  }
+  .frank .grid-container .text {
+    grid-column: 1;
+    grid-row: 1;
+  }
 }
 
 .koolhaas {
-  margin-bottom: 200px;
+  margin-bottom: 100px;
+  padding: 20px;
+  border-radius: 10px;
+}
+.koolhaas p, .koolhaas h2 {
+  color: black;
+  margin-right: 30px;
 }
 
-.zaha img, .frank img, .koolhaas img {
-  width: 15%;
-  margin-left: 30px;
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0px;
+}
+@media (min-width: 601px) and (max-width: 900) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 901px) {
+  .grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-.frank img {
-  padding: 30px;
-}
-.frank p, .frank h2 {
-  margin-left: 250px;
+.koolhaas img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  justify-self: center;
 }
 
+.koolhaas text {
+  text-align: start;
+}
+@media (max-width: 600px) {
+  .koolhaas text {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+  .img {
+    align-content: center;
+  }
+}
 /*CONTACTO*/
 .google {
   width: 100%;
@@ -393,9 +515,19 @@ p {
     padding: 30px;
   }
 }
+@media (min-width: 901px) and (max-width: 600px) {
+  .form h1 {
+    margin-top: 70px;
+  }
+}
+.contacto h2 {
+  color: black;
+}
+
 .contacto p {
   width: 50%;
   margin-top: 40px;
+  color: black;
 }
 
 .contacto-ico {
@@ -410,6 +542,10 @@ p {
 }
 .form-group label {
   margin-bottom: 5px;
+}
+
+.form h2 {
+  color: black;
 }
 
 /*botones*/
