--- a/scss/style.scss
+++ b/scss/style.scss
@@ -213,6 +213,11 @@ h1 {
     width: 100%;
     margin: 0;
   }
+  @media (max-width: 900px) {
+    h1 {
+      margin-top: 50px;
+    }
+  }
 }
 
 #enfoques {
@@ -335,61 +340,181 @@ h1 {
       opacity: 1;
     }
   }
+  @media (max-width: 900px) {
+    h1{
+      margin-top: 50px;
+    }
+    
+  }
 }
 
 /*Titulos, texto e imagenes para seccion equipo*/
 
 #equipo h1 {
-  margin-top: 150px;
-  margin-bottom: 100px;
+  margin-top: 110px;
+  margin-bottom: 150px;
   font-size: 2.5rem;
-}
-
-.zaha h2, .frank h2, .koolhaas h2 {
-  margin-left: 30px;
-}
-
-.zaha p, .frank p, .koolhaas p {
-  margin-left: 30px;
-  width: 70%;
-}
-
-.zaha, .koolhaas {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  
+  @media (max-width: 600px) {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
 }
 
 .zaha {
   margin-bottom: 100px;
+  padding: 20px;
+  border-radius: 10px;
+
+  p, h2 {
+    color: black;
+    margin-right: 30px;
+  }
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0px;
+
+  @media (min-width: 601px) and (max-width:900) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: 901px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.zaha img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  justify-self: center;
+}
+
+.text {
+  text-align: start;
+
+  @media (max-width: 600px) {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+
+  .img {
+    align-content: center;
+  }
 }
 
 .frank {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr;
   margin-bottom: 100px;
-  margin-right: 70px;
-  background-color: rgba(0, 0, 0, 0.07);
-  padding: 30px;
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+
+    img {
+      grid-column: 1;
+      grid-row: 1;
+      width: 50%;
+      height: auto;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 50px;
+      justify-self: center;
+    }
+
+    .text {
+      grid-column: 1;
+      grid-row: 2;
+      text-align: start;
+    }
+    p, h2 {
+      color: black;
+      margin-left: 50px;
+    }
+  }
+
+  @media (min-width: 901px) {
+    .grid-container {
+      grid-template-columns: 1fr 1fr;
+
+      img {
+        grid-column: 2;
+        grid-row: 1 / span 2;
+      }
+
+      .text {
+        grid-column: 1;
+        grid-row: 1;
+      }
+    }
+  }
 }
 
 .koolhaas {
-  margin-bottom: 200px;
-}
-
-.zaha img, .frank img, .koolhaas img {
-  width: 15%;
-  margin-left: 30px;
-}
-
-.frank {
-  img {
-    padding: 30px;
-  }
+  margin-bottom: 100px;
+  padding: 20px;
+  border-radius: 10px;
 
   p, h2 {
-    margin-left: 250px;
+    color: black;
+    margin-right: 30px;
+  }
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0px;
+
+  @media (min-width: 601px) and (max-width:900) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: 901px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.koolhaas img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  justify-self: center;
+}
+
+.koolhaas text {
+  text-align: start;
+
+  @media (max-width: 600px) {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+
+  .img {
+    align-content: center;
   }
 }
 
@@ -436,11 +561,21 @@ h1 {
     grid-template-columns: 1fr 1fr;
     padding: 30px;
   }
+@media (max-width: 600px){
+  .form h1 {
+    margin-top: 70px;
+  }
+}
+}
+
+.contacto h2 {
+  color: black;
 }
 
 .contacto p {
   width: 50%;
   margin-top: 40px;
+  color: black
 }
 
 .contacto-ico {
@@ -457,6 +592,11 @@ h1 {
     margin-bottom: 5px;
   }
 }
+
+.form h2 {
+  color: black
+}
+
 
 /*botones*/
 
