--- a/scss/style.scss
+++ b/scss/style.scss
@@ -399,6 +399,7 @@ h1 {
   text-align: start;
 
   @media (max-width: 600px) {
+    margin-left: 40px;
     text-align: center;
   }
 }
@@ -419,6 +420,7 @@ h1 {
   display: grid;
   grid-template-columns: 1fr;
   margin-bottom: 100px;
+  padding: 20px;
 
   .grid-container {
     display: grid;
@@ -436,14 +438,30 @@ h1 {
       justify-self: center;
     }
 
+    p, h2 {
+      color: black;
+    }
+
     .text {
       grid-column: 1;
       grid-row: 2;
       text-align: start;
-    }
-    p, h2 {
-      color: black;
-      margin-left: 50px;
+
+      @media (max-width: 600px) {
+
+        text-align: center;
+        margin-right: 30px;
+    
+        .text {
+          margin-left: 0px;
+        }
+      }
+      @media (min-width: 601px) and (max-width: 900px){
+        text-align: start;
+        .text h2 {
+          margin: 0px;
+        }
+      }
     }
   }
 
@@ -459,6 +477,7 @@ h1 {
       .text {
         grid-column: 1;
         grid-row: 1;
+        margin-left: 50px;
       }
     }
   }
