--- a/scss/style.scss
+++ b/scss/style.scss
@@ -400,8 +400,17 @@ h1 {
 
   @media (max-width: 600px) {
     margin-left: 40px;
-    text-align: center;
+
+    p{
+      text-align: justify;
+    }
+    
+    h2{
+      text-align: center;
+    }
+
   }
+
 }
 
 @media (max-width: 600px) {
@@ -449,8 +458,15 @@ h1 {
 
       @media (max-width: 600px) {
 
-        text-align: center;
         margin-right: 30px;
+
+        p {
+          text-align: justify;
+        }
+
+        h2 {
+          text-align: center;
+        }
     
         .text {
           margin-left: 0px;
@@ -522,6 +538,12 @@ h1 {
 
   @media (max-width: 600px) {
     text-align: center;
+    p { 
+      text-align: justify;
+    }
+    h2 {
+      text-align: center;
+    }
   }
 }
 
@@ -565,6 +587,17 @@ h1 {
   .contacto-container {
     grid-template-columns: 1fr;
     padding: 30px;
+  }
+   p {
+    text-align: center;
+    margin: 0px auto;
+    font-size: 16px;
+    width: 100%;
+  }
+
+  .contacto-item p {
+    text-align: start;
+    margin: 0px
   }
 }
 
