--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,6 @@ header {
   align-items: center;
 }
 
-/* #arriba h1 {
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    margin-right: auto;
-    margin-left: 0;
-    font-size: 23px;
-  } */
 #arriba p {
   color: black;
   text-decoration: none;
@@ -116,7 +108,6 @@ h1 {
 
 #proyecto {
   margin-top: 90px;
-  /* margin-bottom: 90px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,7 +115,6 @@ h1 {
 }
 #proyecto img {
   max-width: 100%;
-  /* filter: grayscale(70%); */
 }
 
 #enlaces ul {
@@ -179,8 +169,8 @@ h1 {
 }
 .nosotros h1 {
   font-size: 3rem;
-  margin-top: 200px;
-  margin-bottom: 30px;
+  margin-top: 150px;
+  margin-bottom: 60px;
 }
 .nosotros p {
   font-size: 15px;
@@ -195,6 +185,7 @@ h1 {
 @media (max-width: 900px) {
   .nosotros h1 {
     margin-top: 50px;
+    margin-bottom: 30px;
     text-align: center;
   }
   .nosotros p {
@@ -242,6 +233,73 @@ p {
   text-align: justify;
 }
 
+/*NOTICIAS*/
+.noticias {
+  margin-bottom: 100px;
+  padding: 20px;
+  border-radius: 10px;
+}
+.noticias p, .noticias h2 {
+  color: black;
+  margin-right: 30px;
+  margin-bottom: 20px;
+  text-align: justify;
+}
+.noticias p {
+  color: #aaa;
+}
+
+.grid-container-noticias {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 0px;
+  margin-bottom: 50px;
+}
+@media (min-width: 601px) and (max-width: 900) {
+  .grid-container-noticias {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 901px) {
+  .grid-container-noticias {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.noticiasdiv img {
+  width: 50%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  justify-self: center;
+  align-self: center;
+}
+
+.text {
+  text-align: start;
+}
+@media (max-width: 600px) {
+  .text p {
+    text-align: justify;
+    font-size: 8px;
+  }
+  .text h2 {
+    text-align: center;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 600px) {
+  .grid-container-noticias {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 30px;
+  }
+  .img {
+    align-content: center;
+  }
+}
 /*Footer Nosotros*/
 #footernosotros {
   background-color: black;
@@ -293,17 +351,18 @@ p {
   color: black;
 }
 .galeria div {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
   width: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 .galeria img {
-  width: 25%;
-  height: auto;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -328,12 +387,27 @@ p {
 .galeria img:hover::after {
   opacity: 1;
 }
+
 @media (max-width: 900px) {
-  .galeria h1 {
+  h1 {
     margin-top: 50px;
   }
 }
-
+@media (max-width: 600px) {
+  .galeria div {
+    grid-template-columns: 1fr;
+  }
+  .galeria img {
+    width: 90%;
+    margin: 15px;
+    border-radius: 10px;
+  }
+}
+@media (min-width: 601px) and (max-width: 899px) {
+  .galeria img {
+    height: 150px;
+  }
+}
 /*Titulos, texto e imagenes para seccion equipo*/
 #equipo h1 {
   margin-top: 110px;
@@ -542,6 +616,16 @@ p {
 }
 
 /*formulario*/
+@media (max-width: 600px) {
+  .form .form-group textarea, .form .form-group input {
+    width: 85%;
+  }
+  .form .botonenviar, .form .botonborrar {
+    font-size: 10px;
+    padding: 10px 20px;
+  }
+}
+
 .contacto-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -615,6 +699,7 @@ p {
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  font-size: 10x;
 }
 
 .botonenviar {
@@ -703,14 +788,22 @@ nav ul#foot li a:hover {
 /*siguenos footer*/
 #siguenos {
   display: flex;
-  align-items: center;
-  flex-direction: center;
+  align-items: start;
+  flex-direction: column;
   margin-top: 30px;
   color: white;
   margin-bottom: 30px;
 }
 #siguenos p {
   margin-top: 4px;
+}
+
+.siguenoslink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 0px;
 }
 
 .siguenoslink li {
@@ -720,7 +813,7 @@ nav ul#foot li a:hover {
 .facebook a, .instagram a, .twitter a, .linkedin a {
   color: white;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 25px;
   margin-left: 5px;
   margin-right: 3px;
 }
