--- a/scss/_equipo.scss
+++ b/scss/_equipo.scss
@@ -1,5 +1,14 @@
 /*Titulos, texto e imagenes para seccion equipo*/
 
+#equipo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 30px;
+  }
+
 #equipo h1 {
     margin-top: 110px;
     margin-bottom: 150px;
