--- a/csss/style.css
+++ b/csss/style.css
@@ -763,7 +763,7 @@ p {
     width: 100%;
   }
   .contacto-item p {
-    text-align: start;
+    text-align: center;
     margin: 0px;
   }
 }
@@ -778,14 +778,8 @@ p {
     grid-template-columns: 1fr 1fr;
     padding: 30px;
   }
-  .contacto p {
-    margin-left: 150px;
-  }
-  .contacto-ico {
-    margin-left: 140px;
-  }
 }
-@media (min-width: 901px) and (max-width: 600px) {
+@media (max-width: 600px) {
   .form h1 {
     margin-top: 70px;
   }
