--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -46,7 +46,7 @@
     }
   
     .contacto-item p {
-      text-align: start;
+      text-align:center;
       margin: 0px
     }
   }
@@ -63,19 +63,14 @@
       grid-template-columns: 1fr 1fr;
       padding: 30px;
     }
-    .contacto p {
-        margin-left: 150px;
-    }
-    .contacto-ico {
-        margin-left: 140px;
-    }
+  }
     
   @media (max-width: 600px){
     .form h1 {
       margin-top: 70px;
     }
   }
-  }
+  
   
   .contacto h2 {
     color: black;
@@ -84,8 +79,7 @@
   .contacto p {
     width: 50%;
     margin-top: 40px;
-    color: black
-
+    color: black;
   }
   
   .contacto-ico {
