--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -22,41 +22,41 @@
     margin: 100px auto;
   }
   
-  #botones {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-  }
+  // #botones {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   margin-top: 50px;
+  // }
   
-  .botongaleria button {
-    background-color: #444;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    font-size: 10px;
-  }
+  // .botongaleria button {
+  //   background-color: #444;
+  //   color: #fff;
+  //   border: none;
+  //   border-radius: 5px;
+  //   padding: 5px 10px;
+  //   font-size: 10px;
+  // }
   
-  .botoncontacto button {
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #000;
-    border-radius: 5px;
-    padding: 5px 10px;
-    font-size: 10px;
-    margin-left: 10px;
-  }
+  // .botoncontacto button {
+  //   background-color: #fff;
+  //   color: #000;
+  //   border: 1px solid #000;
+  //   border-radius: 5px;
+  //   padding: 5px 10px;
+  //   font-size: 10px;
+  //   margin-left: 10px;
+  // }
   
-  .botongaleria button:hover {
-    background-color: #0e79b2;
-  }
+  // .botongaleria button:hover {
+  //   background-color: #0e79b2;
+  // }
   
-  .botoncontacto button:hover {
-    background-color: #0e79b2;
-    color: #fff;
-    border-color: #0e79b2;
-  }
+  // .botoncontacto button:hover {
+  //   background-color: #0e79b2;
+  //   color: #fff;
+  //   border-color: #0e79b2;
+  // }
   
   #proyecto {
     margin-top: 90px;
