--- a/csss/style.css
+++ b/csss/style.css
@@ -201,42 +201,6 @@ h1 {
   margin: 100px auto;
 }
 
-#botones {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-}
-
-.botongaleria button {
-  background-color: #444;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-size: 10px;
-}
-
-.botoncontacto button {
-  background-color: #fff;
-  color: #000;
-  border: 1px solid #000;
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-size: 10px;
-  margin-left: 10px;
-}
-
-.botongaleria button:hover {
-  background-color: #0e79b2;
-}
-
-.botoncontacto button:hover {
-  background-color: #0e79b2;
-  color: #fff;
-  border-color: #0e79b2;
-}
-
 #proyecto {
   margin-top: 90px;
   display: flex;
@@ -739,7 +703,7 @@ p {
   .form .form-group textarea, .form .form-group input {
     width: 85%;
   }
-  .form .botonenviar, .form .botonborrar {
+  .form .botonenviar, .form .botongaleria button, .botongaleria .form button, .form .botonborrar, .form .botoncontacto button, .botoncontacto .form button {
     font-size: 10px;
     padding: 10px 20px;
   }
@@ -812,42 +776,6 @@ p {
   color: black;
 }
 
-/*botones*/
-.buttons {
-  display: block;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-  font-size: 10x;
-}
-
-.botonenviar {
-  background-color: #444;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-}
-.botonenviar:hover {
-  background-color: #0e79b2;
-  color: #fff;
-  border-color: #0e79b2;
-}
-
-.botonborrar {
-  background-color: #fff;
-  color: #333;
-  border: 1px solid #333;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-.botonborrar:hover {
-  background-color: #0e79b2;
-  color: #fff;
-  border-color: #0e79b2;
-}
-
 /*metodos de contacto iconos y ultimo texto*/
 .contacto-item {
   display: flex;
@@ -856,6 +784,66 @@ p {
 .contacto-item i {
   margin-right: 20px;
   padding-top: 40px;
+}
+
+/*botones*/
+#botones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.buttons, .botonborrar, .botoncontacto button, .botonenviar, .botongaleria button {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  font-size: 10x;
+}
+
+.botonenviar, .botongaleria button {
+  background-color: #444;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+.botonenviar:hover, .botongaleria button:hover {
+  background-color: #0e79b2;
+  color: #fff;
+  border-color: #0e79b2;
+}
+
+.botonborrar, .botoncontacto button {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.botonborrar:hover, .botoncontacto button:hover {
+  background-color: #0e79b2;
+  color: #fff;
+  border-color: #0e79b2;
+}
+
+.botoncontacto button {
+  padding: 5px 10px;
+  font-size: 10px;
+  margin-left: 10px;
+}
+
+.botongaleria button {
+  padding: 5px 10px;
+  font-size: 10px;
+}
+
+.botonenviar, .botongaleria button {
+  padding: 10px 20px;
+}
+
+.botonborrar, .botoncontacto button {
+  padding: 10px 20px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
