--- a/scss/_button-style.scss
+++ b/scss/_button-style.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    text-decoration: none;
   }
 
 .buttons {
@@ -13,6 +14,7 @@
     align-items: center;
     margin-top: 50px;
     font-size: 10x;
+    text-decoration: none;
   }
 
 .botonenviar {
